--- a/src/PlanIt/GuestsBundle/Resources/views/templates/guests.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/templates/guests.html.twig
@@ -56,7 +56,7 @@
                             <form action="" id="payment">
                             <select id="paymentmean-{{guest.id}}" onchange="updateGuest({{guest.id}}, 'paymentmean')" name="payment">
                                 {% for payment in payment_means %}
-                                    <option value="{{payment.id}}" {% if guest.paymentmean.id == payment.id %} selected {% endif %}>{{payment.label}}</option>
+                                    <option value="{{payment.id}}" {% if guest.paymentmean.id == payment.id %} selected="selected" {% endif %}>{{payment.label}}</option>
                                 {% endfor %}
                             </select>
                             </form>
@@ -86,7 +86,7 @@
             <h4 class="modal-title" id="myModalLabel">Voulez vous vraiment supprimer cet invité?</h4>
             </div>
             <div class="modal-body row">
-                <button id="delete_confirm " class="btn btn-default col-md-6"> Oui </button>
+                <button id="delete_confirm" class="btn btn-default col-md-6"> Oui </button>
                 <button id="delete_cancel" class="btn btn-default" class ="col-md-6" data-dismiss="modal"> Non </button>
 
             </div>
